@@ -1,9 +1,36 @@
+// CecilWidgetLibrary.cs
+//
+// Authors: 
+//	Lluis Sanchez Gual  <lluis@novell.com>
+//	Mike Kestner  <mkestner@novell.com>
+//
+// Copyright (c) 2008 Novell, Inc
+//
+// Permission is hereby granted, free of charge, to any person obtaining
+// a copy of this software and associated documentation files (the
+// "Software"), to deal in the Software without restriction, including
+// without limitation the rights to use, copy, modify, merge, publish,
+// distribute, sublicense, and/or sell copies of the Software, and to
+// permit persons to whom the Software is furnished to do so, subject to
+// the following conditions:
+// 
+// The above copyright notice and this permission notice shall be
+// included in all copies or substantial portions of the Software.
+// 
+// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+// MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+// LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+// OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+// WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+
 using System;
 using System.IO;
 using System.Collections;
 using System.Collections.Generic;
 using System.Collections.Specialized;
-using System.Reflection;
 using System.Xml;
 using Mono.Cecil;
 
@@ -11,7 +38,7 @@ namespace Stetic
 {
 	internal class CecilWidgetLibrary: WidgetLibrary
 	{
-		static LibraryCache cache = LibraryCache.Load ();
+		static LibraryCache cache = LibraryCache.Cache;
 
 		AssemblyDefinition assembly;
 		string name;
@@ -42,7 +69,7 @@ namespace Stetic
 			
 			ScanDependencies ();
 		}
-		
+
 		void ReadCachedDescription (string assemblyPath)
 		{
 			if (!cache.IsCurrent (assemblyPath))
@@ -97,9 +124,7 @@ namespace Stetic
 		
 		public override bool NeedsReload {
 			get {
-				if (!System.IO.File.Exists (fileName))
-					return false;
-				return cache.IsCurrent (fileName);
+				return File.Exists (fileName) && !cache.IsCurrent (fileName);
 			}
 		}
 		
@@ -133,6 +158,7 @@ namespace Stetic
 						MemoryStream ms = new MemoryStream (eres.Data);
 						objects = new XmlDocument ();
 						objects.Load (ms);
+						Load (objects);
 					}
 					
 					if (eres.Name == "gui.stetic") {
@@ -142,8 +168,6 @@ namespace Stetic
 					}
 				}
 			}
-			
-			Load (objects);
 			
 			canGenerateCode = true;
 			// If it depends on libraries which can't generate code,
